--- a/Modelbouwer/MainWindow.xaml
+++ b/Modelbouwer/MainWindow.xaml
@@ -8,7 +8,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
 	Title="Modelbouwer toolbox"
-	mc:Ignorable="d"
+	mc:Ignorable="d" WindowState="Maximized"
 	>
 	<Grid>
 		<Grid.RowDefinitions>
