--- a/Modelbouwer/Resources/Styles/TextBlock.xaml
+++ b/Modelbouwer/Resources/Styles/TextBlock.xaml
@@ -15,6 +15,17 @@
 	</Style>
 	<!--#endregion-->
 
+	<!--#region TextBlock DataGrid (Sub)Total summary block-->
+	<Style x:Key="DataGrid.Group.Total" TargetType="TextBlock">
+		<Setter Property="FontWeight" Value="DemiBold" />
+		<Setter Property="HorizontalAlignment" Value="Left" />
+		<Setter Property="FontStyle" Value="Italic"/>
+		<Setter Property="FontSize" Value="14"/>
+		<Setter Property="Foreground" Value="DarkSlateBlue"/>
+		<Setter Property="VerticalAlignment" Value="Center" />
+	</Style>
+	<!--#endregion-->
+
 	<!--#region Textlock that is vissible if valueShow is checked-->
 	<!--  If the ValueShow checkbox is unchecked the style will HIDE the element with the style, and make visible if checkbox is checked  -->
 	<Style x:Key="HideOnNotShowTextBlock" TargetType="TextBlock">
