--- a/Modelbouwer/Resources/Styles/TextBox.xaml
+++ b/Modelbouwer/Resources/Styles/TextBox.xaml
@@ -1,27 +1,28 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:converter="clr-namespace:Modelbouwer.Converters">
-	
+﻿<ResourceDictionary
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:converter="clr-namespace:Modelbouwer.Converters"
+	>
+
 	<converter:TooltipValidationConverter x:Key="TooltipValidationConverter" />
 
-	<Style TargetType="TextBox" BasedOn="{StaticResource DefaultTextBox}">
+	<Style BasedOn="{StaticResource DefaultTextBox}" TargetType="TextBox">
 		<Style.Triggers>
-			<!-- Trigger voor validatiefouten -->
+			<!--  Trigger voor validatiefouten  -->
 			<Trigger Property="Validation.HasError" Value="True">
+				<Setter Property="BorderBrush" Value="Red" />
+				<Setter Property="BorderThickness" Value="2" />
 				<Setter Property="ToolTip">
 					<Setter.Value>
 						<MultiBinding Converter="{StaticResource TooltipValidationConverter}">
-							<!-- Voeg de validatiefout toe -->
+							<!--  Voeg de validatiefout toe  -->
 							<Binding Path="(Validation.Errors)[0].ErrorContent" RelativeSource="{RelativeSource Self}" />
-							<!-- Voeg de bestaande ToolTip toe -->
+							<!--  Voeg de bestaande ToolTip toe  -->
 							<Binding Path="ToolTip" RelativeSource="{RelativeSource Self}" />
 						</MultiBinding>
 					</Setter.Value>
 				</Setter>
-				<Setter Property="BorderBrush" Value="Red" />
-				<Setter Property="BorderThickness" Value="2" />
 			</Trigger>
 		</Style.Triggers>
 	</Style>
 </ResourceDictionary>
-					
