--- a/Modelbouwer/View/StorageManagement.xaml
+++ b/Modelbouwer/View/StorageManagement.xaml
@@ -2,16 +2,236 @@
 	x:Class="Modelbouwer.View.StorageManagement"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:Engine="clr-namespace:Syncfusion.UI.Xaml.TreeView.Engine;assembly=Syncfusion.SfTreeView.WPF"
+	xmlns:converter="clr-namespace:Modelbouwer.Converters"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:helper="clr-namespace:Modelbouwer.Helper"
 	xmlns:local="clr-namespace:Modelbouwer.View"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+	xmlns:viewmodels="clr-namespace:Modelbouwer.ViewModels"
 	Title="StorageManagement"
-	d:DesignHeight="600"
-	d:DesignWidth="1000"
-	mc:Ignorable="d"
 	>
 
-	<Grid>
-		<TextBlock Text="Welcome to StorageManagement" />
-	</Grid>
+	<Page.Resources>
+		<converter:GreaterThanZeroConverter x:Key="GreaterThanZeroConverter" />
+	</Page.Resources>
+
+	<Page.DataContext>
+		<viewmodels:CombinedInventoryViewModel />
+	</Page.DataContext>
+
+	<Border Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Style="{DynamicResource MainBorder}">
+		<Grid Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="50" />
+				<RowDefinition Height="*" />
+				<RowDefinition Height="0" />
+			</Grid.RowDefinitions>
+
+			<!--#region Page title-->
+			<StackPanel Grid.Row="0" Orientation="Vertical">
+				<Grid>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*" />
+						<ColumnDefinition Width="2*" />
+					</Grid.ColumnDefinitions>
+
+					<TextBlock
+						Grid.Column="0"
+						Style="{DynamicResource Title}"
+						Text="{StaticResource Edit.Inventory.Title}"
+						/>
+				</Grid>
+				<Path Style="{DynamicResource TitleLine}" />
+				<TextBlock
+					Grid.Column="0"
+					Style="{DynamicResource SubTitle}"
+					Text="{StaticResource Edit.Inventory.Subtitle}"
+					/>
+				<CheckBox
+					x:Name="valueShow"
+					IsChecked="True"
+					Style="{DynamicResource HiddenCheckBox}"
+					/>
+			</StackPanel>
+			<!--#endregion-->
+
+			<!--#region Datagrid-->
+			<syncfusion:SfDataGrid
+				x:Name="dataGrid"
+				Grid.Row="1"
+				Margin="10,5"
+				AllowDeleting="False"
+				AllowEditing="False"
+				AllowFiltering="True"
+				AllowGrouping="True"
+				AllowResizingColumns="True"
+				AllowTriStateSorting="True"
+				AutoGenerateColumns="False"
+				ColumnSizer="Star"
+				FilterRowPosition="Top"
+				ItemsSource="{Binding InventoryViewModel.Inventory, Mode=TwoWay}"
+				SelectedIndex="0"
+				SortClickAction="SingleClick"
+				>
+				<syncfusion:SfDataGrid.Columns>
+					<syncfusion:GridTextColumn
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.Id}"
+						IsHidden="True"
+						MappingName="ProductId"
+						/>
+
+					<syncfusion:GridTextColumn
+						Width="20"
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="False"
+						HeaderText=""
+						MappingName="ShowCellIcon"
+						>
+						<syncfusion:GridTextColumn.CellTemplate>
+							<DataTemplate>
+								<Image>
+									<Image.Style>
+										<Style TargetType="{x:Type Image}">
+											<Setter Property="Margin" Value="3" />
+											<Setter Property="Source" Value="{x:Null}" />
+											<Setter Property="Visibility" Value="Collapsed" />
+
+											<Style.Triggers>
+												<DataTrigger Binding="{Binding ProductShortInventory, Converter={StaticResource GreaterThanZeroConverter}}" Value="True">
+													<Setter Property="Source" Value="{StaticResource short}" />
+													<Setter Property="ToolTip" Value="Er is te weinig voorraad, ook wanneer eventuele bestellingen worden toegevoegd" />
+													<Setter Property="Visibility" Value="Visible" />
+												</DataTrigger>
+
+												<DataTrigger Binding="{Binding ProductTempShortInventory, Converter={StaticResource GreaterThanZeroConverter}}" Value="True">
+													<Setter Property="Source" Value="{StaticResource tempshort}" />
+													<Setter Property="ToolTip" Value="Er is te weinig voorraad, maar wanneer de bestellingen worden toegevoegd is er voldoende voorraad" />
+													<Setter Property="Visibility" Value="Visible" />
+												</DataTrigger>
+
+												<MultiDataTrigger>
+													<MultiDataTrigger.Conditions>
+														<Condition Binding="{Binding ProductShortInventory}" Value="0" />
+														<Condition Binding="{Binding ProductTempShortInventory}" Value="0" />
+													</MultiDataTrigger.Conditions>
+													<Setter Property="Source" Value="{x:Null}" />
+													<Setter Property="Visibility" Value="Collapsed" />
+												</MultiDataTrigger>
+											</Style.Triggers>
+										</Style>
+									</Image.Style>
+								</Image>
+							</DataTemplate>
+						</syncfusion:GridTextColumn.CellTemplate>
+					</syncfusion:GridTextColumn>
+					<syncfusion:GridTextColumn
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.Code}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="ProductCode"
+						/>
+					<syncfusion:GridTextColumn
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.Name}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="ProductName"
+						/>
+					<syncfusion:GridTextColumn
+						AllowGrouping="True"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.Category}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="ProductCategory"
+						/>
+					<syncfusion:GridTextColumn
+						AllowGrouping="True"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.Location}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="ProductStorageLocation"
+						/>
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.MinStock}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="ProductMinimalStock"
+						/>
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.Price}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="ProductPrice"
+						/>
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.Inventory}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="ProductInventory"
+						/>
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.Value}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="ProductInventoryValue"
+						/>
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.InOrder}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="ProductInOrder"
+						/>
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.VirtualInventory}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="ProductVirtualInventory"
+						/>
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.VirtualValue}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="ProductVirtualInventoryValue"
+						/>
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False"
+						AllowGrouping="False"
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.Short}"
+						HorizontalHeaderContentAlignment="Right"
+						IsHidden="True"
+						MappingName="ProductShortInventory"
+						/>
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False"
+						AllowGrouping="False"
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.TempShort}"
+						HorizontalHeaderContentAlignment="Right"
+						IsHidden="True"
+						MappingName="ProductTempShortInventory"
+						/>
+
+
+
+
+				</syncfusion:SfDataGrid.Columns>
+			</syncfusion:SfDataGrid>
+			<!--#endregion-->
+		</Grid>
+	</Border>
 </Page>
